--- a/registro.html
+++ b/registro.html
@@ -23,18 +23,18 @@
             <form action="./registro_concluido.html" class="formulario flex flex--column">
                 <fieldset>
                     <legend class="form__label">Información básica</legend>
-                    <div class="input-container">
-                        <input name="name" id="name" class="input" type="text" placeholder="Nombre" required>
+                    <div class="input-container"> <!--input-container--invalid  permite poner en rojo la casilla-->
+                        <input name="name" id="name" class="input" type="text" placeholder="Nombre" required data-tipo="nombre">
                         <label class="input-label" for="name">Nombre</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Email" required>
+                        <input name="email" id="email" class="input" type="email" placeholder="Email" required data-tipo="email">
                         <label class="input-label" for="email">Email</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña" required minlength="6" maxlength="12" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[ !@#$%^&*_=+-]).{6,12}$" title="Debe contener de 6 a 12 caracteres, una letra minuscula, una mayúscula, un número y no puede contener caracteres especiales">
+                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña" required minlength="6" maxlength="12" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[ !@#$%^&*_=+-]).{6,12}$" title="Debe contener de 6 a 12 caracteres, una letra minuscula, una mayúscula, un número y no puede contener caracteres especiales" data-tipo="password">
                         <label class="input-label" for="password">Contraseña</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
@@ -74,6 +74,6 @@
             </form>
         </section>
     </main>
-    <script src="./js/validaciones.js"></script>
+    <script src="./js/app.js" type="module"></script>
 </body>
 </html>
